src-gen/main/java/ru/vsu/cs/course4/lang/Parser.java
/* Parser.java */
/* Generated by: ParserGeneratorCC: Do not edit this line. Parser.java */
package ru.vsu.cs.course4.lang;

import java.util.*;

import ru.vsu.cs.course4.lang.ast.*;

public class Parser implements ParserConstants {

  final public ValueNode value() throws ParseException {Token val;
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case INT_VALUE:{
      val = jj_consume_token(INT_VALUE);
      break;
      }
    case FLOAT_VALUE:{
      val = jj_consume_token(FLOAT_VALUE);
      break;
      }
    case STRING_VALUE:{
      val = jj_consume_token(STRING_VALUE);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new ValueNode(val.image);}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public IdentNode ident() throws ParseException {Token ident;
    ident = jj_consume_token(IDENT);
{if ("" != null) return new IdentNode(ident.image);}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode group() throws ParseException {ExprNode e;
    IdentNode funcName; ParamsListNode params;
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case INT_VALUE:
    case FLOAT_VALUE:
    case STRING_VALUE:{
      e = value();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2)) {
        funcName = ident();
        jj_consume_token(21);
        params = exprList();
        jj_consume_token(22);
e = new FuncCallNode(funcName, params);
      } else {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case IDENT:{
          e = ident();
          break;
          }
        case 21:{
          jj_consume_token(21);
          e = expr();
          jj_consume_token(22);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode mult() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = group();
    label_1:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 23:
      case 24:
      case 25:{
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 23:{
        op = jj_consume_token(23);
        break;
        }
      case 24:{
        op = jj_consume_token(24);
        break;
        }
      case 25:{
        op = jj_consume_token(25);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = group();
arg1 = new BinaryOpNode(op.image, arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode add() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = mult();
    label_2:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 26:
      case 27:{
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 26:{
        op = jj_consume_token(26);
        break;
        }
      case 27:{
        op = jj_consume_token(27);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = mult();
arg1 = new BinaryOpNode(op.image, arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode compare1() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = add();
    label_3:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 28:
      case 29:
      case 30:
      case 31:{
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 28:{
        op = jj_consume_token(28);
        break;
        }
      case 29:{
        op = jj_consume_token(29);
        break;
        }
      case 30:{
        op = jj_consume_token(30);
        break;
        }
      case 31:{
        op = jj_consume_token(31);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = add();
arg1 = new BinaryOpNode(op.image, arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode compare2() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = compare1();
    label_4:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 32:
      case 33:{
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 32:{
        op = jj_consume_token(32);
        break;
        }
      case 33:{
        op = jj_consume_token(33);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      arg2 = compare1();
arg1 = new BinaryOpNode(op.image, arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode logAnd() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = compare2();
    label_5:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 34:{
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      op = jj_consume_token(34);
      arg2 = compare2();
arg1 = new BinaryOpNode(op.image, arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode logOr() throws ParseException {ExprNode arg1; ExprNode arg2; Token op;
    arg1 = logAnd();
    label_6:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 35:{
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      op = jj_consume_token(35);
      arg2 = logAnd();
arg1 = new BinaryOpNode(op.image, arg1, arg2);
    }
{if ("" != null) return arg1;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExprNode expr() throws ParseException {ExprNode r;
    r = logOr();
{if ("" != null) return r;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public StmtNode statement() throws ParseException {StmtNode stmt;
    stmt = stmt();
{if ("" != null) return stmt;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public StmtNode returnStmt() throws ParseException {ExprNode expr;
    jj_consume_token(RETURN);
    expr = expr();
    jj_consume_token(36);
{if ("" != null) return new ReturnNode(expr);}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public AssignNode assign() throws ParseException {IdentNode ident; ExprNode expr;
    ident = ident();
    jj_consume_token(37);
    expr = expr();
{if ("" != null) return new AssignNode(ident, expr);}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public StmtNode stmt() throws ParseException {IdentNode ident; ExprNode expr; StmtNode statement;
    AssignNode assign;
    StmtNode ifStmt; StmtNode elseStmt = null;
    AssignNode init = null; ExprNode cond = null; AssignNode step = null; StmtNode forStmt;
    IdentNode funcName; ParamsListNode params; StmtNode stmts;
    ExprNode returnExpr = null;
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(21);
      expr = expr();
      jj_consume_token(22);
      ifStmt = stmt();
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        elseStmt = stmt();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
{if ("" != null) return new IfNode(expr, ifStmt, elseStmt);}
      break;
      }
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(21);
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case IDENT:{
        init = assign();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(36);
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case INT_VALUE:
      case FLOAT_VALUE:
      case STRING_VALUE:
      case IDENT:
      case 21:{
        cond = expr();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(36);
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case IDENT:{
        step = assign();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(22);
      forStmt = stmt();
{if ("" != null) return new ForNode(init, cond, step, forStmt);}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(21);
      cond = expr();
      jj_consume_token(22);
      statement = stmt();
{if ("" != null) return new WhileNode(cond, statement);}
      break;
      }
    case DO:{
      jj_consume_token(DO);
      statement = stmt();
      jj_consume_token(WHILE);
      jj_consume_token(21);
      cond = expr();
      jj_consume_token(22);
      jj_consume_token(36);
{if ("" != null) return new DoWhileNode(cond, statement);}
      break;
      }
    case FUNCTION:{
      jj_consume_token(FUNCTION);
      funcName = ident();
      jj_consume_token(21);
      params = exprList();
      jj_consume_token(22);
      jj_consume_token(38);
      stmts = stmtList();
      jj_consume_token(39);
{if ("" != null) return new FuncNode(funcName, params, stmts);}
      break;
      }
    case 38:{
      jj_consume_token(38);
      stmts = stmtList();
      jj_consume_token(39);
{if ("" != null) return new StmtListNode(stmts);}
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case INT_VALUE:
      case FLOAT_VALUE:
      case STRING_VALUE:
      case IDENT:
      case 21:{
        returnExpr = expr();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
{if ("" != null) return new ReturnNode(returnExpr);}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_2(2)) {
        funcName = ident();
        jj_consume_token(21);
        params = exprList();
        jj_consume_token(22);
        jj_consume_token(36);
{if ("" != null) return new FuncCallNode(funcName, params);}
      } else {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case IDENT:{
          ident = ident();
          jj_consume_token(37);
          expr = expr();
          jj_consume_token(36);
{if ("" != null) return new AssignNode(ident, expr);}
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new IllegalStateException ("Missing return statement in function");
}

  final public StmtNode stmtList() throws ParseException {List<StmtNode> list = new ArrayList<>();
    label_7:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case IF:
      case FOR:
      case WHILE:
      case DO:
      case FUNCTION:
      case RETURN:
      case IDENT:
      case 38:{
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
StmtNode stmt;
      stmt = stmt();
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 36:{
        jj_consume_token(36);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
list.add(stmt);
    }
{if ("" != null) return new StmtListNode(list);}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ParamsListNode exprList() throws ParseException {List<ExprNode> list = new ArrayList<>();
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case INT_VALUE:
    case FLOAT_VALUE:
    case STRING_VALUE:
    case IDENT:
    case 21:{
ExprNode item;
      item = expr();
list.add(item);
      label_8:
      while (true) {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case 40:{
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          break label_8;
        }
        jj_consume_token(40);
item=expr(); { list.add(item); }
      }
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
{if ("" != null) return new ParamsListNode(list);}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public StmtNode program() throws ParseException {StmtNode program;
    program = stmtList();
    jj_consume_token(0);
{if ("" != null) return program;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public AstNode start() throws ParseException {AstNode program;
    program = program();
{if ("" != null) return program;}
    throw new IllegalStateException ("Missing return statement in function");
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla;
    jj_scanpos = token;
    jj_lastpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla;
    jj_scanpos = token;
    jj_lastpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3R_9()
 {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_3R_9()) return true;
    if (jj_scan_token(21)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_9()) return true;
    if (jj_scan_token(21)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[24];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x4c0,0x4c0,0x300000,0x3800000,0x3800000,0xc000000,0xc000000,0xf0000000,0xf0000000,0x0,0x0,0x0,0x0,0x4000,0x100000,0x3004c0,0x100000,0x3004c0,0xfa000,0x100000,0x1fa000,0x0,0x0,0x3004c0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x3,0x3,0x4,0x8,0x0,0x0,0x0,0x0,0x0,0x40,0x0,0x40,0x10,0x100,0x0,};
	}
  private final JJCalls[] jj_2_rtns = new JJCalls[2];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /**
   * Constructor with InputStream.
   * @param stream input stream
   */
  public Parser(final java.io.InputStream stream) {
	  this(stream, null);
  }

  /**
   * Constructor with InputStream and supplied encoding
   * @param stream input stream
   * @param encoding charset to be used
   */
  public Parser(final java.io.InputStream stream, final String encoding) {
   try {
     jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
   } catch(final java.io.UnsupportedEncodingException e) {
     throw new IllegalStateException(e);
   }
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Reinitialise
   * @param stream input stream
   */
  public void ReInit(final java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /**
   * Reinitialise
   * @param stream input stream
   * @param encoding charset to be used
   */
  public void ReInit(final java.io.InputStream stream, final String encoding) {
	  try {
      jj_input_stream.reInit(stream, encoding, 1, 1);
    } catch(final java.io.UnsupportedEncodingException e) { 
      throw new IllegalStateException(e);
    }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Constructor with InputStream.
   * @param stream char stream
   */
  public Parser(final java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
   for (int i = 0; i < 24; i++)
     jj_la1[i] = -1;
   for (int i = 0; i < jj_2_rtns.length; i++)
     jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Reinitialise
   * @param stream char stream
   */
  public void ReInit(final java.io.Reader stream) {
	if (jj_input_stream == null) {
	  jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	  jj_input_stream.reInit(stream, 1, 1);
  }
	if (token_source == null) {
 token_source = new ParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
   for (int i = 0; i < 24; i++)
     jj_la1[i] = -1;
   for (int i = 0; i < jj_2_rtns.length; i++)
     jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Constructor with generated Token Manager.
   * @param tm Token manager to use
   */
  public Parser(final ParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Reinitialise
   * @param tm Token manager to use
   */
  public void ReInit(final ParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(final int kind) throws ParseException {
    final Token oldToken = token;
    if (token.next != null)
      token = token.next;
    else {
      token.next = token_source.getNextToken();
      token = token.next;
    }
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen)
              c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  private static final class LookaheadSuccess extends IllegalStateException {}
  private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		   jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		   jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


  /**
   * @return the next Token.
   */
  public final Token getNextToken() {
   if (token.next != null)
     token = token.next;
   else
     token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

  /**
   * @param index index to be retrieved
   * @return the specific Token.
   */
  public final Token getToken(final int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next == null)
        t.next = token_source.getNextToken();
      t = t.next;
    }
    return t;
  }

  private int jj_ntk_f() {
    jj_nt = token.next;
    if (jj_nt == null) {
      token.next = token_source.getNextToken();
      jj_ntk = token.next.kind;
      return jj_ntk;
    }
    jj_ntk = jj_nt.kind;
    return jj_ntk;
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
  if (pos >= 100) {
    return;
  }

  if (pos == jj_endpos + 1) {
    jj_lasttokens[jj_endpos++] = kind;
  } else if (jj_endpos != 0) {
    jj_expentry = new int[jj_endpos];

    for (int i = 0; i < jj_endpos; i++) {
      jj_expentry[i] = jj_lasttokens[i];
    }

    for (final int[] oldentry : jj_expentries) {
      if (oldentry.length == jj_expentry.length) {
        boolean isMatched = true;
        for (int i = 0; i < jj_expentry.length; i++) {
          if (oldentry[i] != jj_expentry[i]) {
            isMatched = false;
            break;
          }
        }
        if (isMatched) {
          jj_expentries.add(jj_expentry);
          break;
        }
      }
    }

    if (pos != 0) {
      jj_endpos = pos;
      jj_lasttokens[jj_endpos - 1] = kind;
    }
  }
}

  /**
   * Generate ParseException.
   * @return new Exception object. Never <code>null</code>
   */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[41];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 24; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 41; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /**
   * @return Always <code>false</code>.
   */
  public final boolean trace_enabled() {
    return false;
  }

  /** Enable tracing. */
  public final void enable_tracing() {}

  /** Disable tracing. */
  public final void disable_tracing() {}

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 2; i++) {
      try {
        JJCalls p = jj_2_rtns[i];
        do {
          if (p.gen > jj_gen) {
            jj_la = p.arg;
            jj_scanpos = p.first;
            jj_lastpos = p.first;
            switch (i) {
              case 0: jj_3_1(); break;
              case 1: jj_3_2(); break;
            }
          }
          p = p.next;
        } while (p != null);
      } catch(LookaheadSuccess ls) { /* ignore */ }
    }
    jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) {
        p.next = new JJCalls();
        p = p.next;
        break;
      }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; 
    p.first = token;
    p.arg = xla;
  }

  static final class JJCalls {
	 int gen;
	 Token first;
	 int arg;
	 JJCalls next;
  }

}
